<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AxisController" Id="{bb5157e3-d7bc-45dd-b679-faf503b80da3}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_AxisController :
STRUCT

{IF defined (AXIS_MAP)}
  {info 'TEST ST_AxisController'}
  ToPlc    AT %I* : ST_In;
  FromPlc  AT %Q* : ST_Out;
{ELSE}
  ToPlc    : ST_In;
  FromPlc  : ST_Out;
{END_IF}

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>