<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_GearIn" Id="{4031b4bf-0e82-48bf-882e-4435be508faa}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_GearIn :
STRUCT
  RatioNumerator  : REAL := 1.0; 
  RatioDenominator: UINT := 1; 
  Acceleration    : REAL;
  Deceleration    : REAL;
  Jerk            : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>