<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_GearInMultiMaster" Id="{f4ac166e-3a10-0652-3f8d-7fec7962a4fc}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_GearInMultiMaster :
STRUCT  
  byAxisIDMaster1  : BYTE; // AxisID of Master1
  byAxisIDMaster2  : BYTE; // AxisID of Master2
  byAxisIDMaster3  : BYTE; // AxisID of Master3
  byAxisIDMaster4  : BYTE; // AxisID of Master4
  GearRatio1       : REAL; 
  GearRatio2       : REAL; 
  GearRatio3       : REAL; 
  GearRatio4       : REAL; 
  Acceleration     : REAL;
  Deceleration     : REAL;
  Jerk             : REAL;  
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>